--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smart Business Card</title>
 
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="w-100 h-100 bg-black position-relative d-flex flex-column gap-4 justify-content-center align-items-center height-adjust home-bg">
         <!-- Navbar -->
@@ -23,15 +24,31 @@
         </div>
         <!-- Navbar -->
 
+        <!-- Popups Div -->
+        <div class="position-relative container overflow-hidden d-flex justify-content-center align-items-center h-custom">
+            <div class="text-white notifications d-flex flex-column justify-content-between align-items-center bg-transparent px-3 py-2 z-99" id="notificationDiv">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h4 class="me-5 pe-5">Notifications</h4>
+                    <button class="ms-5 ps-5 btn bg-transparent border-0" id="notificationDropDown"><i class="fa-solid text-white fa-ellipsis-vertical"></i></button>
+                </div>
+                <!--Notification Dropdown  -->
+                <div class="w-100" id="notificationButtons">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <button class="btn bg-transparent text-white btns"><i class="fa-solid fa-check"></i> Mark all</button>
+                        <button class="btn bg-transparent text-white btns"><i class="fa-solid fa-trash-can"></i> Delete</button>
+                    </div>
+                </div>
+            <!-- End of notification dropdown -->
+            </div>
+        </div>
+        <!-- End of popup Div -->
+
         <!-- home-effect -->
         <div class="home-effect"></div>
 
         <!-- list Div -->
-        <div class="container height-adjust z-99 pt-5 position-relative overflow-hidden">
-            <div class="text-white notifications d-flex justify-content-between align-items-center bg-black px-3 py-2 z-99" id="notificationDiv">
-                <h4 class="me-5 pe-5">Notifications</h4>
-                <button class="ms-5 ps-5 btn bg-transparent border-0"><i class="fa-solid text-white fa-ellipsis-vertical"></i></button>
-            </div>
+        <div class="w-50 height-adjust z-99 pt-5 position-relative overflow-hidden">
+
             <ul class="list-style-none text-white d-flex flex-column flex-lg-row gap-3 justify-content-between align-items-center container-fluid">
                 <li class="d-flex flex-column justify-content-center align-items-center py-3 bg-theme listHover rounded-3" id="addAction">
                     <img src="images/star-dynamic-clay.png" class="w-25" alt="" id="addActionImg">
